finish the appel home page

--- a/apples-home-page/index.html
+++ b/apples-home-page/index.html
@@ -8,7 +8,6 @@
       content="this is a practice of replicating apples home page"
     />
     <meta name="author" content="beka birhanu atomsa" />
-    <link rel="icon" href="./images/icons/logo.png">
     <title>Home</title>
     <link rel="stylesheet" href="./apple.css" />
     <link
@@ -58,7 +57,7 @@
       <article id="main-highlight">
         <section id="mac" class="centerd-text">
           <p id="model">16-inch model</p>
-          <p class="product-title">macbook pro</p>
+          <p class="product-title">Macbook pro</p>
           <p class="brief-description">The best for the brightest.</p>
           <ul class="buy">
             <li><a href="#">learn more</a></li>
@@ -91,12 +90,13 @@
           </ul>
         </section>
       </article>
-      <article id="other-product" class="centerd horizontal-container">
+      <article id="other-product" class="horizontal-container">
         <div class="stacked">
-          <section id="apple-watch" class="silver-box">
+          <section id="apple-watch" class="centerd-text silver-box">
             <img
               src="images/icons/watch-series5-logo.png"
               alt="watch series5 logo"
+              class="logo"
             />
             <p class="discription">
               With the new Always-On Retina display.<br />
@@ -107,30 +107,33 @@
               <li><a href="#">buy</a></li>
             </ul>
           </section>
-          <section id="apple tv">
-            <img src="images/icons//apple-tv-logo.png" alt="/apple tv logo" />
-            <img src="images/icons/servant-logo.png" alt="servant logo" />
+          <section id="apple-tv" class="centerd-text silver-box">
+            <div>
+              <img src="images/icons//apple-tv-logo.png" alt="/apple tv logo" />
+            </div>
+            <div id="tvshow-logo-wraper">
+              <img src="images/icons/servant-logo.png" alt="servant logo" />
+            </div>
 
             <a href="#" id="watch">Watch the trailer</a>
           </section>
-          <section id="mac-pro" class="centerd-text">
+          <section id="mac-pro" class="centerd-text silver-box">
             <p id="model">16-inch model</p>
             <p class="product-title">macbook pro</p>
-            <p class="brief-description">The best for the brightest.</p>
+            <p class="description">The best for the brightest.</p>
             <ul class="buy">
               <li><a href="#">learn more</a></li>
               <li><a href="#">buy</a></li>
             </ul>
-            <img
-              src="./images/home/macbook-pro.jpg"
-              alt="macbook-pro"
-              class="centerd-img"
-            />
           </section>
         </div>
-        <div class="stacked">
-          <section id="apple-card">
-            <img src="images/icons/apple-card-logo.png" alt="apple card logo" />
+        <div class="stacked" id="right">
+          <section id="apple-card" class="centerd-text silver-box">
+            <img
+              src="images/icons/apple-card-logo.png"
+              alt="apple card logo"
+              class="logo"
+            />
             <p class="discription">
               Get 3% Daily Cash on purchases from Apple using Apple Card.
             </p>
@@ -139,7 +142,7 @@
               <li><a href="#">buy</a></li>
             </ul>
           </section>
-          <section id="airpods">
+          <section id="airpods" class="centerd-text silver-box">
             <p class="product-title">AirPods Pro</p>
             <p class="discription">Magic like you’ve never heard.</p>
             <ul class="buy">
@@ -147,8 +150,12 @@
               <li><a href="#">buy</a></li>
             </ul>
           </section>
-          <section id="iPad">
-            <img src="images/icons/new-ipad-logo.png" alt="ipad logo" />
+          <section id="iPad" class="centerd-text silver-box">
+            <img
+              src="images/icons/new-ipad-logo.png"
+              alt="ipad logo"
+              class="logo"
+            />
             <p class="discription">Magic like you’ve never heard.</p>
             <ul class="buy">
               <li><a href="#">learn more</a></li>
