--- a/puppy -lovers/index.html
+++ b/puppy -lovers/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="beka birhanu" />
     <title>Puppy page</title>
-    <link rel="stylesheet" href="./puppy.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header class="boarder">
